--- a/src/components/Window/AboutWindow.css
+++ b/src/components/Window/AboutWindow.css
@@ -81,6 +81,10 @@
   align-items: center;
   justify-content: center;
   padding: 2rem;
+
+  .h1 {
+    font-size: 10px;
+  }
 }
 
 .tech-icons-container {
@@ -134,4 +138,10 @@
   justify-content: center;
   max-width: max-content;
 }
+
+.techname {
+    font-size: 1.5rem;
+}
+
+
 }
